Fix basemap height to 100% of screen height, set maximum sidebar height and add scrollbars, set basemap and sidebar on same z-index, setup basemap width toggle based on sidebar display or collapse

--- a/src/app/app.less
+++ b/src/app/app.less
@@ -313,16 +313,21 @@ textarea {
   }
 }
 
+#pushobj {
+  float: right;
+  width: 75%;
+  height: 100%;
+}
+
 .menu {
-  width: 350px;
-  min-height: 100%;
-  height: 700px;
+  width: 25%;
+  height: 100%;
   margin-top: 0px;
   background-color: #F5F5F5;
-  z-index: 1;
   position: absolute;
   top: 0px;
   left: 0px;
+  overflow-y: scroll;
   font-family: 'Open Sans Condensed', sans-serif;
 }
 
